// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MastoAdmin actionAccount 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "data": "{\\"type\\":\\"disable\\",\\"report_id\\":\\"123123\\",\\"warning_preset_id\\":\\"123123\\",\\"text\\":\\"Your account have been disabled\\",\\"send_email_notification\\":false}",
        "headers": Object {
          "Content-Type": "application/json",
        },
        "method": "POST",
        "transformResponse": Array [
          [Function],
        ],
        "url": "https://example.com/api/v1/admin/accounts/123/action",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`MastoAdmin approveAccount 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "data": "{}",
        "headers": Object {
          "Content-Type": "application/json",
        },
        "method": "POST",
        "transformResponse": Array [
          [Function],
        ],
        "url": "https://example.com/api/v1/admin/accounts/123/approve",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`MastoAdmin assignReportToSelf 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "data": "{}",
        "headers": Object {
          "Content-Type": "application/json",
        },
        "method": "POST",
        "transformResponse": Array [
          [Function],
        ],
        "url": "https://example.com/api/v1/admin/reports/123/assign_to_self",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`MastoAdmin enableAccount 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "data": "{}",
        "headers": Object {
          "Content-Type": "application/json",
        },
        "method": "POST",
        "transformResponse": Array [
          [Function],
        ],
        "url": "https://example.com/api/v1/admin/accounts/123/enable",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`MastoAdmin fetchAccount 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "data": undefined,
        "headers": Object {
          "Content-Type": "application/json",
        },
        "method": "GET",
        "params": Object {},
        "transformResponse": Array [
          [Function],
        ],
        "url": "https://example.com/api/v1/admin/accounts/123",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`MastoAdmin fetchAccounts 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "data": undefined,
        "headers": Object {
          "Content-Type": "application/json",
        },
        "method": "GET",
        "params": Object {},
        "transformResponse": Array [
          [Function],
        ],
        "url": "https://example.com/api/v1/admin/accounts",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`MastoAdmin fetchReport 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "data": undefined,
        "headers": Object {
          "Content-Type": "application/json",
        },
        "method": "GET",
        "params": Object {},
        "transformResponse": Array [
          [Function],
        ],
        "url": "https://example.com/api/v1/admin/reports/123",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`MastoAdmin fetchReports 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "data": undefined,
        "headers": Object {
          "Content-Type": "application/json",
        },
        "method": "GET",
        "params": Object {},
        "transformResponse": Array [
          [Function],
        ],
        "url": "https://example.com/api/v1/admin/reports",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`MastoAdmin rejectAccount 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "data": "{}",
        "headers": Object {
          "Content-Type": "application/json",
        },
        "method": "POST",
        "transformResponse": Array [
          [Function],
        ],
        "url": "https://example.com/api/v1/admin/accounts/123/reject",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`MastoAdmin reopenReport 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "data": "{}",
        "headers": Object {
          "Content-Type": "application/json",
        },
        "method": "POST",
        "transformResponse": Array [
          [Function],
        ],
        "url": "https://example.com/api/v1/admin/reports/123/reopen",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`MastoAdmin resolveReport 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "data": "{}",
        "headers": Object {
          "Content-Type": "application/json",
        },
        "method": "POST",
        "transformResponse": Array [
          [Function],
        ],
        "url": "https://example.com/api/v1/admin/reports/123/resolve",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`MastoAdmin unassignReport 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "data": "{}",
        "headers": Object {
          "Content-Type": "application/json",
        },
        "method": "POST",
        "transformResponse": Array [
          [Function],
        ],
        "url": "https://example.com/api/v1/admin/reports/123/unassign",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`MastoAdmin unsilenceAccount 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "data": "{}",
        "headers": Object {
          "Content-Type": "application/json",
        },
        "method": "POST",
        "transformResponse": Array [
          [Function],
        ],
        "url": "https://example.com/api/v1/admin/accounts/123/unsilence",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`MastoAdmin unsuspendAccount 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "data": "{}",
        "headers": Object {
          "Content-Type": "application/json",
        },
        "method": "POST",
        "transformResponse": Array [
          [Function],
        ],
        "url": "https://example.com/api/v1/admin/accounts/123/unsuspend",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;
